# OOP_Assignment_1

./: CMakeLists.txt
Assignment_1/: main.cpp
Assignment_1/Airplane/: Airplane.cpp  Airplane.h
Assignment_1/CLI/: CLI.cpp  CLI.h
Assignment_1/ConfigReader/: ConfigReader.cpp  ConfigReader.h
Assignment_1/FileCloser/: FileCloser.cpp  FileCloser.h
Assignment_1/FileHandler/: FileHandler.cpp  FileHandler.h
Assignment_1/Ticket/: Ticket.cpp  Ticket.h
Assignment_1/config/: config2.txt  config3.txt
